fix: changelog image on mobile

--- a/pages/game/[slug]/game-changelog.module.css
+++ b/pages/game/[slug]/game-changelog.module.css
@@ -39,6 +39,7 @@
 }
 
 .game-changelog-cover {
+  width: 100%;
   max-width: 800px;
   border-radius: var(--margin-02);
 }
